minor fixes on mobile versions

--- a/style.scss
+++ b/style.scss
@@ -57,6 +57,7 @@ h4 {
   @include textBox($white, column, 50px, $fontStack, $fontBold, 30px);
   list-style: none;
   width: 50%;
+  padding-left: 0%;
   li {
     margin-bottom: 4rem;
     display: inline-block;
@@ -252,7 +253,7 @@ footer {
   width: 50%;
   display: flex;
   flex-direction: row;
-  a{
+  a {
     @include textBox($white, row, 20px, $fontStack, $fontBold, 15px);
     margin-top: 3rem;
     margin-right: 2rem;
@@ -307,7 +308,7 @@ footer {
   display: flex;
   flex-direction: column;
   text-align: center;
-  a{
+  a {
     text-decoration: none;
     padding-top: 1.5rem;
   }
@@ -324,21 +325,16 @@ footer {
   }
 }
 
-.gridText {
-  @include textBox($white, row, 30px, $fontStack, $fontNormal, 36px);
-  margin-top: -2rem;
-  justify-content: center;
-}
-
-#mailForm{
+#mailForm {
   display: flex;
   flex-direction: column;
   align-self: center;
   width: 80%;
   margin-top: 5rem;
+  padding-bottom: 3rem;
 }
 
-.mailFormInput{
+.mailFormInput {
   @include textBox($offWhite, row, 25px, $fontStack, $fontNormal, 30px);
   background-color: rgba($color: #000000, $alpha: 0);
   border: $offWhite solid 3px;
@@ -346,11 +342,27 @@ footer {
   margin-bottom: 1.5rem;
 }
 
-.formMsg{
+.formMsg {
   padding-bottom: 20rem;
 }
 
-
+.contactInfoHome {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  svg {
+    margin-top: 14px;
+  }
+}
+.contactInfo {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  svg {
+    margin-top: 14px;
+  }
+}
 /*workshop start*/
 .workshopFlex {
   display: flex;
@@ -418,8 +430,12 @@ span {
   margin-top: -1rem;
 }
 hr {
-  width: 50%;
+  width: 60%;
   border: 1px solid rgba(255, 255, 255, 0.5);
+  margin-inline-start: 0%;
+}
+.longHr {
+  width: 100%;
 }
 
 /*about us end*/
@@ -504,11 +520,20 @@ hr {
     text-align: center;
     width: 170px;
   }
-  hr {
-    display: none;
-  }
   footer {
-    display: none;
+    display: block;
+  }
+  .contactInfoHome {
+    width: 100%;
+    svg {
+      margin-top: 10px;
+    }
+  }
+  .contactInfo {
+    width: 100%;
+    svg {
+      margin-top: 4px;
+    }
   }
   /*about us mediaquerries end*/
   /*services mediqquerries start*/
@@ -528,17 +553,17 @@ hr {
     }
   }
 
-  .logo1{
-    a{
+  .logo1 {
+    a {
       font-size: 12px;
     }
   }
 
-  .logo2{
+  .logo2 {
     display: none;
   }
 
-  .indexArt{
+  .indexArt {
     display: none;
   }
   /*services mediqquerries end*/
